# alastria-identity-lib-py

./: .coveragerc  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
alastria_identity/: exceptions.py  types.py
alastria_identity/examples/: alastria_contract_config_generation.py  config_generation_example.py  contract_service_example.py  create_alastria_identity_example.py  credential_contract_example.py  identity_manager_example.py  presentation_registry_example.py  publi_key_example.py  public_key_example.py
alastria_identity/services/: __init__.py  config_builder.py  contracts.py  credential_registry.py  identity.py  identity_manager.py  parsers.py  presentation_registry.py  public_key.py  tokens.py  transaction_service.py  transactions.py
alastria_identity/tests/: test_config_builder.py  test_contracts.py  test_credential_registry.py  test_identity_manager.py  test_identity_service.py  test_parsers.py  test_presentation_registry.py  test_public_key.py  test_tokens.py  test_transaction_service.py
alastria_identity/types/: __init__.py  alastria_identity_creation.py  alastria_session.py  alastria_token.py  config_parser.py  credential.py  entity.py  presentation.py  presentation_request.py  transaction.py
