[tool.poetry]
name = "alastria-identity-py"
version = "0.1.0"
description = ""
authors = ["Javier Aguirre <javi@wealize.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
web3 = "^5.13.0"
requests = "^2.24.0"
pytest = "^6.1.1"
mock = "^4.0.2"
jwcrypto = "^0.8"
ecdsa = "^0.16.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
