[tool.poetry]
name = "alastria-identity"
version = "0.4.0"
description = ""
authors = ["Javier Aguirre <javi@wealize.digital>"]
license = "MIT"
packages = [
    { include = "alastria_identity" }
]
homepage = "https://github.com/Wealize/alastria-identity-lib-py"
repository = "https://github.com/Wealize/alastria-identity-lib-py"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
web3 = "^5.13.0"
requests = "^2.24.0"
pytest = "^6.1.1"
mock = "^4.0.2"
jwcrypto = "^0.8"
ecdsa = "^0.16.1"
eth_abi = "^2.1.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"
rope = "^0.18.0"
coverage = "^5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
